made ALOT of changes

--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
-VITE_CLERK_PUBLISHABLE_KEY=pk_test_dXByaWdodC1zdW5maXNoLTQxLmNsZXJrLmFjY291bnRzLmRldiQ
-VITE_CLERK_SIGN_IN_FORCE_REDIRECT_URL=/auth-sync
-VITE_CLERK_SIGN_UP_FORCE_REDIRECT_URL=/auth-sync
 VITE_APPWRITE_PROJECT_ID=6837ef09002f8ba596b2
 VITE_APPWRITE_DATABASE_ID=6837efec0023a0fe20ef
 VITE_GEMINI_API_KEY=AIzaSyAOla56FKDMp-wDF4Z0cLf4kjpLygiU3xE
 VITE_APPWRITE_ENDPOINT=https://cloud.appwrite.io/v1
+VITE_FIREBASE_API_KEY=AIzaSyCFyvCbnqGuG78aJ7tU_bKxHQa_NGZnHBg
+VITE_FIREBASE_AUTH_DOMAIN=taskyai-52f5b.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=taskyai-52f5b
+VITE_FIREBASE_APP_ID=1:678434451236:web:ee7212428641d4e6a0cdb1
