--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 VITE_APPWRITE_PROJECT_ID=6837ef09002f8ba596b2
 VITE_APPWRITE_DATABASE_ID=6837efec0023a0fe20ef
 VITE_GEMINI_API_KEY=AIzaSyAOla56FKDMp-wDF4Z0cLf4kjpLygiU3xE
-VITE_APPWRITE_ENDPOINT=https://cloud.appwrite.io/v1
+VITE_APPWRITE_ENDPOINT=https://fra.cloud.appwrite.io/v1
 VITE_FIREBASE_API_KEY=AIzaSyCFyvCbnqGuG78aJ7tU_bKxHQa_NGZnHBg
 VITE_FIREBASE_AUTH_DOMAIN=taskyai-52f5b.firebaseapp.com
 VITE_FIREBASE_PROJECT_ID=taskyai-52f5b
